# puLang

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  ir-spec.md  language-spec.md  positioning.md  pulang-compiler-roadmap.md  pulang-syntax.md  review-notes.md  roadmap.md  style-guide.md
examples/: README.md  drums_demo.py  drums_live_demo.py  drums_virtual_midi.py  full_song.py  hot_reload_playback.py  instrument_swap.py  minimal.py  multi_track.py  playback.py
pypulang/: __init__.py  drums.py  dsl.py  midi.py  patterns.py  pitches.py  resolution.py  scales.py
pypulang/ir/: __init__.py  intent.py
pypulang/playback/: __init__.py  builtin_synth.py  config.py  drum_sampler.py  instruments.py  protocols.py  virtual_midi.py  watcher.py
pypulang/samples/: ATTRIBUTION.md
scripts/: generate_drum_samples.py
tests/: __init__.py  test_drums.py  test_dsl.py  test_dsl_midi.py  test_intent_ir.py  test_midi.py  test_patterns.py  test_pitches.py  test_playback.py  test_scales_and_resolution.py
